--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ permissions:
 jobs:
   release:
     name: release ${{ matrix.target }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
@@ -17,10 +17,21 @@ jobs:
             archive: zip
     steps:
       - uses: actions/checkout@v3
-      - name: Compile and release
-        uses: rust-build/rust-build.action@v1.4.0
+      - uses: dtolnay/rust-toolchain@stable
+      - name: Install cross
+        run: cargo install cross
+      - name: Create Artifact
+        run: |
+          cross build --release --locked --target x86_64-pc-windows-gnu 
+          mkdir dist
+          cp target/x86_64-pc-windows-gnu/release/xed.exe dist/
+          cp LICENSE dist/LICENSE.txt
+          cd dist
+          zip -r xed-windows xed.exe LICENSE.txt
+          cd ..
+      - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          RUSTTARGET: ${{ matrix.target }}
-          ARCHIVE_TYPES: ${{ matrix.archive }}
+        run: |
+          curl -fsSL https://github.com/github/hub/raw/master/script/get | bash -s 2.14.1
+          bin/hub release edit -a "dist/xed-windows.zip" -m ${GITHUB_REF#refs/tags/} ${GITHUB_REF#refs/tags/}
