--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "xed"
 description = "Xenonauts save editor"
-version = "1.2.2"
+version = "1.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -13,3 +13,4 @@ strip = true
 [dependencies]
 aho-corasick = "1.0"
 eframe = "0.22"
+egui_file = "0.10"
