--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "xed"
-description = "Xenonauts save editor"
+description = "Xenonauts CE save editor"
 version = "1.3.1"
 edition = "2021"
 
