--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,14 +3,14 @@ name = "xed"
 description = "Xenonauts CE save editor"
 version = "1.3.2"
 edition = "2021"
+rust-version = "1.76"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [profile.release]
 lto = true
-strip = true
 
 [dependencies]
 aho-corasick = "1.1"
-eframe = "0.25"
-egui_file = "0.14"
+eframe = "0.29"
+egui_file = "0.19"
